Update in footer

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 			</div>
 
 			<div id="cspio-credit">
-					<span>Developed by <a target="_blank" href="http://itmmlp.ml">KSITM Malappuram Team</a>
+					<span>Developed by <a target="_blank" href="http://itmmlp.ml">Kerala State IT Mission Malappuram Team</a>
 				</span></div>
 									    									    			    			    							    			     			    		
 		</div><!-- end of #cspio-content -->
