contact number updated

--- a/contactUs.html
+++ b/contactUs.html
@@ -29,7 +29,7 @@
             <div class="container">
               <h2>Chat in WhatsApp</h2>
               <p>7593857125</p>
-              <p><a href="http://wa.me/7593857125"><button class="button">Chat Now</button></a></p>
+              <p><a href="http://wa.me/+917593857125"><button class="button">Chat Now</button></a></p>
             </div>
           </div>
         </div>
@@ -40,7 +40,7 @@
             <div class="container">
               <h2>Call Us</h2>
               <p>7593857125</p>
-              <p><a href="tel:7593857125"><button class="button">Call Now</button></a></p>
+              <p><a href="tel:+917593857125"><button class="button">Call Now</button></a></p>
             </div>
           </div>
         </div>
