Button color changed

--- a/contactUs.html
+++ b/contactUs.html
@@ -15,7 +15,7 @@
             B3 Block, Near National Informatic Centre (NIC)<br>
             Collectorate, Malappuram, 676505
         </address><hr>
-        <button onclick="myFunction()">Click to Copy Address</Address></button>
+        <button style="background-color: #008CBA; color: white;" onclick="myFunction()">Click to Copy Address</Address></button>
         <input type="text" readonly disabled 
         value="Kerala State IT Mission District Office, B3 Block, Near National Informatic Centre (NIC), Collectorate, Malappuram, 676505"  id="officeAddress">
         
