--- a/contactUs.html
+++ b/contactUs.html
@@ -25,11 +25,11 @@
       <div class="row">
         <div class="column">
           <div class="card">
-            <a href="https://wa.me/message/Q6KZI6YC3RXOD1"><img style="height: 250px; width: 250px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1200px-WhatsApp.svg.png" alt="WhatsApp" style="width:100%"></a>
+            <a href="https://wa.me/+917593857125"><img style="height: 250px; width: 250px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1200px-WhatsApp.svg.png" alt="WhatsApp" style="width:100%"></a>
             <div class="container">
               <h2>Chat in WhatsApp</h2>
               <p>7593857125</p>
-              <p><a href="https://wa.me/message/Q6KZI6YC3RXOD1"><button class="button">Chat Now</button></a></p>
+              <p><a href="https://wa.me/+917593857125"><button class="button">Chat Now</button></a></p>
             </div>
           </div>
         </div>
