--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   
   <div class="contact-info">
     <h2>Contact Information</h2>
-    <p>Company Name</p>
+    <p>Kerala State IT Mission</p>
     <p>Address</p>
     <p>Phone: 123-456-7890</p>
     <p>Email: info@company.com</p>
