--- a/ourteam.html
+++ b/ourteam.html
@@ -1,185 +1,135 @@
-<div class="container-block container">
-  <p class="text-blk team-head-text">
-    Our Team
-  </p>
-  <div class="responsive-container-block teamcard-container">
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft12.svg">
+<div class="responsive-container-block outer-container">
+  <div class="responsive-container-block inner-container">
+    <div class="responsive-cell-block wk-desk-4 wk-ipadp-4 wk-tab-12 wk-mobile-12">
+      <p class="text-blk heading-text">
+        Meet our dream team
+      </p>
+      <p class="text-blk sub-heading-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Commodo enim risus
+        sit nullam aliquam. Mattis.
+      </p>
+    </div>
+    <div class="responsive-cell-block wk-desk-8 wk-ipadp-8 wk-tab-12 wk-mobile-12">
+      <p class="text-blk team-name">
+        Management Team
+      </p>
+      <div class="responsive-container-block">
+        <div class="swiper-container team-1-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-6 wk-tab-6 wk-mobile-12">
+                <img class="team-member-image" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ET3.jpg">
+                <p class="text-blk name">
+                  Gustavo Workman
+                </p>
+                <p class="text-blk position">
+                  CEO
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-6 wk-tab-6 wk-mobile-12">
+                <img class="team-member-image" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ET4.jpg">
+                <p class="text-blk name">
+                  Gustavo Workman
+                </p>
+                <p class="text-blk position">
+                  CEO
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-6 wk-tab-6 wk-mobile-12">
+                <img class="team-member-image" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ET5.jpg">
+                <p class="text-blk name">
+                  Gustavo Workman
+                </p>
+                <p class="text-blk position">
+                  CEO
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-6 wk-tab-6 wk-mobile-12">
+                <img class="team-member-image" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ET4.jpg">
+                <p class="text-blk name">
+                  Gustavo Workman
+                </p>
+                <p class="text-blk position">
+                  CEO
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
+        <div class="btn">
+          <div class="swiper-button-nexts">
+            <img class="arrow-right-1" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/Path.svg">
+          </div>
+          <div class="swiper-button-prevs">
+            <img class="arrow-left-1" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/Path.svg">
+          </div>
         </div>
       </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft13.svg">
+      <p class="text-blk team-name">
+        Engineering Team
+      </p>
+      <div class="responsive-container-block">
+        <div class="swiper-container team-2-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-6 wk-tab-6 wk-mobile-12">
+                <img class="team-member-image" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ET5.jpg">
+                <p class="text-blk name">
+                  Gustavo Workman
+                </p>
+                <p class="text-blk position">
+                  CEO
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-6 wk-tab-6 wk-mobile-12">
+                <img class="team-member-image" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ET3.jpg">
+                <p class="text-blk name">
+                  Gustavo Workman
+                </p>
+                <p class="text-blk position">
+                  CEO
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-6 wk-tab-6 wk-mobile-12">
+                <img class="team-member-image" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ET4.jpg">
+                <p class="text-blk name">
+                  Gustavo Workman
+                </p>
+                <p class="text-blk position">
+                  CEO
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="responsive-cell-block wk-desk-4 wk-ipadp-6 wk-tab-6 wk-mobile-12">
+                <img class="team-member-image" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ET3.jpg">
+                <p class="text-blk name">
+                  Gustavo Workman
+                </p>
+                <p class="text-blk position">
+                  CEO
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft14.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft12.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft13.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft14.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft12.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft13.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft14.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft12.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft13.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-      <div class="team-card">
-        <div class="team-img-wrapper">
-          <img class="team-img" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/ft14.svg">
-        </div>
-        <div class="team-card-content">
-          <p class="text-blk name">
-            Roger Lubin
-          </p>
-          <p class="text-blk position">
-            CEO
-          </p>
+        <div class="btn">
+          <div class="swiper-button-nexts2">
+            <img class="arrow-right-2" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/Path.svg">
+          </div>
+          <div class="swiper-button-prevs2">
+            <img class="arrow-left-2" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/Path.svg">
+          </div>
         </div>
       </div>
     </div>
